k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: quakewatch
  namespace: quakewatch
  labels:
    app: quakewatch
spec:
  replicas: 2
  selector:
    matchLabels:
      app: quakewatch
  template:
    metadata:
      labels:
        app: quakewatch
    spec:
      containers:
        - name: quakewatch
          image: sergeytemkin/quakewatch:latest
          ports:
            - containerPort: 5000
          resources:
            requests:
              cpu: "50m"
              memory: "96Mi"
            limits:
              cpu: "300m"
              memory: "256Mi"
          readinessProbe:
            httpGet:
              path: /health
              port: 5000
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /health
              port: 5000
            initialDelaySeconds: 20
            periodSeconds: 20
