k8s/nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: quakewatch-nodeport
  namespace: quakewatch
spec:
  selector:
    app: quakewatch
  type: NodePort
  ports:
    - name: http
      port: 80
      targetPort: 5000
      nodePort: 30080
