k8s/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: quakewatch-svc
spec:
  selector:
    app: quakewatch
  ports:
    - port: 80
      targetPort: 5000
  type: NodePort
